--- a/Portfolio/Views/Home/_LayoutIndex.cshtml
+++ b/Portfolio/Views/Home/_LayoutIndex.cshtml
@@ -31,7 +31,6 @@
     </button>
     <div class="collapse navbar-collapse" id="navbarNav">
         @* TODO: Write blog articles and uncomment *@
-
         @* <ul class="nav navbar-nav"> *@
         @*     <li class="nav-item"> *@
         @*         <a asp-area="" asp-controller="Home" asp-action="Index" class="nav-link js-scroll-trigger">Home</a> *@
@@ -46,6 +45,9 @@
             </li>
             <li class="nav-item">
                 <a class="nav-link" href="https://www.linkedin.com/in/kklosowski/"><i class="fab fa-2x fa-linkedin"></i></a>
+            </li>
+            <li class="nav-item">
+                <a class="nav-link" href="~/files/Kamil Klosowski - CV.pdf"><i class="fa fa-2x fa-file-alt"></i></a>
             </li>
             @{
                 @if (User.IsInRole("Admin"))
